--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<html html>
 <head>
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="aaa"><img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;</a>
+    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
@@ -51,4 +51,4 @@
   </div>
   <script type="text/javascript" src="app.js"></script>
 </body>
-</!DOCTYPE>
+</html>
