--- a/index.html
+++ b/index.html
@@ -1,57 +1,66 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
+
 <body>
-  <div class="aaa"><img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
+  <div class="header">
+    <img class="header__img" src="./eisenhower-matrix.jpg">
+    <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+  <div class="container">
+    <section class="add-item" id="add-item">
+      <label class="add-item__title" for="new-task">Add Item</label>
+      <div class="add-item__wrapper">
+        <input id="new-task" class="task task--add" type="text">
+        <button class="add button">Add</button>
       </div>
-    </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-      <li class="editMode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-    </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li><input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
-          <img src="./remove.svg">
-        </button>
-      </li>
-    </ul>
+    </section>
+    <section class="todo">
+      <h3 class="title">Todo</h3>
+      <ul class="list" id="incomplete-tasks">
+        <li class="item">
+          <input class="checkbox" type="checkbox">
+          <label class="task-title">Pay Bills</label>
+          <input class="task" type="text">
+          <button class="edit button">Edit</button>
+          <button class="delete button">
+            <img src="./remove.svg">
+          </button>
+        </li>
+        <li class="item--edit item">
+          <input class="checkbox" type="checkbox">
+          <label class="task-title">Go Shopping</label>
+          <input class="task" type="text" value="Go Shopping">
+          <button class="edit button">Save</button>
+          <button class="delete button">
+            <img src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </section>
+    <section class="completed">
+      <h3 class="title">Completed</h3>
+      <ul class="list" id="completed-tasks">
+        <li class="item">
+          <input class="checkbox" type="checkbox" checked>
+          <label class="task-title task-title--done">See the Doctor</label>
+          <input type="text" class="task">
+          <button class="edit button">Edit</button>
+          <button class="delete button">
+            <img src="./remove.svg">
+          </button>
+        </li>
+      </ul>
+    </section>
   </div>
   <script src="app.js"></script>
 </body>
+
 </html>
