--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="header">
-    <img class="header__img" src="./eisenhower-matrix.jpg">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
     <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
@@ -50,7 +50,7 @@
       <ul class="list" id="completed-tasks">
         <li class="item">
           <input class="checkbox" type="checkbox" checked>
-          <label class="task-title task-title--done">See the Doctor</label>
+          <label class="task-title">See the Doctor</label>
           <input type="text" class="task">
           <button class="edit button">Edit</button>
           <button class="delete button">
