refactor: sort files to folders to rule 6 in generic-principles.md

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="./styles/style.css" media="screen" charset="utf-8">
 </head>
 
 <body>
   <div class="header">
-    <img class="header__img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
+    <img class="header__img" src="./asserts/eisenhower-matrix.jpg" alt="The Eisenhower matrix">
     <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">
       Want more details?
     </a>
@@ -31,7 +31,7 @@
           <input class="task" type="text">
           <button class="edit button">Edit</button>
           <button class="delete button">
-            <img src="./remove.svg">
+            <img src="./asserts/remove.svg">
           </button>
         </li>
         <li class="item--edit item">
@@ -40,7 +40,7 @@
           <input class="task" type="text" value="Go Shopping">
           <button class="edit button">Save</button>
           <button class="delete button">
-            <img src="./remove.svg">
+            <img src="./asserts/remove.svg">
           </button>
         </li>
       </ul>
@@ -54,13 +54,13 @@
           <input type="text" class="task">
           <button class="edit button">Edit</button>
           <button class="delete button">
-            <img src="./remove.svg">
+            <img src="./asserts/remove.svg">
           </button>
         </li>
       </ul>
     </section>
   </div>
-  <script src="app.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 
 </html>
