--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./styles/style.css" media="screen" charset="utf-8">
 </head>
 
-<body>
+<body class="body">
   <div class="header">
     <img class="header__img" src="./asserts/eisenhower-matrix.jpg" alt="The Eisenhower matrix">
     <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">
@@ -31,7 +31,7 @@
           <input class="task" type="text">
           <button class="edit button">Edit</button>
           <button class="delete button">
-            <img src="./asserts/remove.svg">
+            <img src="./asserts/remove.svg" alt="remove">
           </button>
         </li>
         <li class="item--edit item">
@@ -40,7 +40,7 @@
           <input class="task" type="text" value="Go Shopping">
           <button class="edit button">Save</button>
           <button class="delete button">
-            <img src="./asserts/remove.svg">
+            <img src="./asserts/remove.svg" alt="remove">
           </button>
         </li>
       </ul>
@@ -54,7 +54,7 @@
           <input type="text" class="task">
           <button class="edit button">Edit</button>
           <button class="delete button">
-            <img src="./asserts/remove.svg">
+            <img src="./asserts/remove.svg" alt="remove">
           </button>
         </li>
       </ul>
