--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-  <title>Todo App</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" href="./styles/style.css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="./styles/style.css" media="screen">
+  <title>Todo App</title>
 </head>
 
 <body class="body">
+  <h1 class="main-title">TODO planner</h1>
   <div class="header">
     <img class="header__img" src="./asserts/eisenhower-matrix.jpg" alt="The Eisenhower matrix">
     <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">
@@ -23,7 +24,7 @@
       </div>
     </section>
     <section class="todo">
-      <h3 class="title">Todo</h3>
+      <h2 class="title">Todo</h2>
       <ul class="list" id="incomplete-tasks">
         <li class="item">
           <input class="checkbox" type="checkbox">
@@ -46,7 +47,7 @@
       </ul>
     </section>
     <section class="completed">
-      <h3 class="title">Completed</h3>
+      <h2 class="title">Completed</h2>
       <ul class="list" id="completed-tasks">
         <li class="item">
           <input class="checkbox" type="checkbox" checked>
