refactor: add semantic tags and classes for images

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 
 <body class="body">
-  <h1 class="main-title">TODO planner</h1>
-  <div class="header">
-    <img class="header__img" src="./asserts/eisenhower-matrix.jpg" alt="The Eisenhower matrix">
-    <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">
-      Want more details?
-    </a>
-  </div>
-  <div class="container">
+  <header>
+    <h1 class="main-title">TODO planner</h1>
+    <div class="header">
+      <img class="header__img" src="./asserts/eisenhower-matrix.jpg" alt="The Eisenhower matrix">
+      <a class="header__info" href="https://goal-life.com/page/method/matrix-eisenhower">
+        Want more details?
+      </a>
+    </div>
+  </header>
+  <main class="container">
     <section class="add-item" id="add-item">
       <label class="add-item__title" for="new-task">Add Item</label>
       <div class="add-item__wrapper">
@@ -32,7 +34,7 @@
           <input class="task" type="text">
           <button class="edit button">Edit</button>
           <button class="delete button">
-            <img src="./asserts/remove.svg" alt="remove">
+            <img class="button__img" src="./asserts/remove.svg" alt="remove">
           </button>
         </li>
         <li class="item--edit item">
@@ -41,7 +43,7 @@
           <input class="task" type="text" value="Go Shopping">
           <button class="edit button">Save</button>
           <button class="delete button">
-            <img src="./asserts/remove.svg" alt="remove">
+            <img class="button__img" src="./asserts/remove.svg" alt="remove">
           </button>
         </li>
       </ul>
@@ -55,12 +57,12 @@
           <input type="text" class="task">
           <button class="edit button">Edit</button>
           <button class="delete button">
-            <img src="./asserts/remove.svg" alt="remove">
+            <img class="button__img" src="./asserts/remove.svg" alt="remove">
           </button>
         </li>
       </ul>
     </section>
-  </div>
+  </main>
   <script src="./js/app.js"></script>
 </body>
 
